[gd_scene load_steps=10 format=3 uid="uid://kwe4yisyu54p"]

[ext_resource type="Script" path="res://levels/minigame.gd" id="1_130j5"]
[ext_resource type="PackedScene" uid="uid://3kgshpypy3rm" path="res://scenes/city.tscn" id="1_h0wuq"]
[ext_resource type="Texture2D" uid="uid://dpkbp2vbvd8j1" path="res://assets/background.png" id="2_6n5ls"]
[ext_resource type="PackedScene" uid="uid://equok5cjqcqu" path="res://scenes/player.tscn" id="2_sqsnt"]
[ext_resource type="Texture2D" uid="uid://du5shvjy2jh28" path="res://assets/level3.png" id="3_5s7bq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3il7c"]
size = Vector2(96, 46.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwatb"]
size = Vector2(128, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v804l"]
size = Vector2(64, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8mc3"]

[node name="Minigame" type="Node2D"]
script = ExtResource("1_130j5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 544)
texture = ExtResource("2_6n5ls")

[node name="City" parent="." instance=ExtResource("1_h0wuq")]
position = Vector2(192, 64)
scale = Vector2(2, 2)

[node name="Player" parent="." instance=ExtResource("2_sqsnt")]
position = Vector2(256, 576)
movement_enabled = false

[node name="GameOverLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(640, 0)
offset_left = 800.0
offset_top = 512.0
offset_right = 1312.0
offset_bottom = 640.0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
fit_content = true

[node name="GameContainer" type="Node2D" parent="."]

[node name="StopArea1" type="Node2D" parent="GameContainer"]
position = Vector2(544, 960)

[node name="ColorRect" type="ColorRect" parent="GameContainer/StopArea1"]
offset_left = -64.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 64.0
color = Color(0.317846, 0.587195, 0.223951, 1)

[node name="Area2D" type="Area2D" parent="GameContainer/StopArea1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/StopArea1/Area2D"]
position = Vector2(32, 14.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_3il7c")

[node name="StopArea2" type="Node2D" parent="GameContainer"]
position = Vector2(224, 960)

[node name="ColorRect" type="ColorRect" parent="GameContainer/StopArea2"]
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.317846, 0.587195, 0.223951, 1)

[node name="Area2D" type="Area2D" parent="GameContainer/StopArea2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/StopArea2/Area2D"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_xwatb")

[node name="StopArea3" type="Node2D" parent="GameContainer"]
position = Vector2(1152, 960)

[node name="ColorRect" type="ColorRect" parent="GameContainer/StopArea3"]
offset_left = -64.0
offset_top = -32.0
offset_bottom = 64.0
color = Color(0.317846, 0.587195, 0.223951, 1)

[node name="Area2D" type="Area2D" parent="GameContainer/StopArea3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/StopArea3/Area2D"]
position = Vector2(-32, 16)
shape = SubResource("RectangleShape2D_v804l")

[node name="Arrow" type="Node2D" parent="GameContainer"]
position = Vector2(1408, 960)

[node name="Sprite2D" type="Sprite2D" parent="GameContainer/Arrow"]
scale = Vector2(8, 8)
texture = ExtResource("3_5s7bq")

[node name="Area2D" type="Area2D" parent="GameContainer/Arrow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/Arrow/Area2D"]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_g8mc3")
